--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,10 +7,35 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
+  
+  <Button
+      android:id="@+id/set_location"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentTop="true"
+      android:text="@string/set_location" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+  <Button
+      android:id="@+id/start"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentTop="true"
+      android:layout_toRightOf="@+id/set_location"
+      android:text="@string/start" />
+  
+  <Button
+	  android:id="@+id/select_apps"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+	  android:layout_alignParentTop="true"
+      android:text="@string/select_apps" 
+      android:layout_toRightOf="@+id/start" />
+  
+  <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+			android:id="@+id/map"
+			android:name="com.google.android.gms.maps.MapFragment"
+			android:layout_below="@id/set_location"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent" />
 
 </RelativeLayout>
